2023-12-24         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (print_array): Use the subscript as the
	subarray name instead of the `vname' field. This field
	is not there for arrays created with NUMINT subscripts.
	Thanks again to Hermann Peifer for the report.

	Unrelated:

	* debug.c (find_subscript): Fail early on Node_var_new
	and Node_elem_new.  Thanks yet again to Hermann Peifer
	for the report.

2023-12-21         Arnold D. Robbins     <arnold@skeeve.com>

	Fix multidimensional array printing in the debugger, again.
	Thanks again to Hermann Peifer for the report.

	* debug.c (print_array): Maintain a stack of array names
	and indexes, and print it when printing the value.
	(print_array_names): New function.

2023-12-21         Arnold D. Robbins     <arnold@skeeve.com>

	Try to close a race condition window on SIGPIPE. See the thread at
	https://lists.gnu.org/archive/html/bug-gawk/2023-12/msg00011.html.
	Thanks to Andreas Schwab <schwab@suse.de>.

	* awk.h (ignore_sigpipe, set_sigpipe_to_default): Remove decls,
	they're not functions.
	(do_nothing_on_signal): Add declaration.
	(silent_catch_sigpipe): New macro.
	* builtin.c (do_system): Replace call of set_sigpipe_to_default()
	with call to silent_catch_sigpipe().
	* io.c (redirect_string, gawk_popen): Ditto.
	(do_nothing_on_signal): New function.

2023-12-12  Eli Zaretskii  <eliz@gnu.org>

	* io.c (redirect_string): Check registered parsers before failing
	due to EISDIR.

2023-12-02         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (print_array): Fix printing of multidimensional arrays.
	Thanks to Hermann Peifer for the report.

2023-11-28         Arnold D. Robbins     <arnold@skeeve.com>

	Straighten out Node_elem_new some more.  Thanks to "M"
	<c24p0101@gmail.com> for the report and to Andrew Schorr for
	the reduced test case.

	* awk.h (force_string_fmt): Don't clear NUMBER from the flags.
	(force_number): Handle Node_elem_new case. (Ooops.)