@@ -1,3 +1,9 @@
+2024-12-25         Andrew J. Schorr      <aschorr@telemetry-investments.com>
+
+	* io.c (get_read_timeout): Make gawk match the doc and have
+	GAWK_READ_TIMEOUT work if no entry in PROCINFO. Thanks
+	to Ed Morton for the report.
+
 2023-12-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* debug.c (print_array): Use the subscript as the
